# UO-ComputerScience-DataScience

./: .gitattributes  .gitignore  .gitmodules  README.md
CIS 210 - CS I/: Untitled.py  jumbletest.py  lecture_notes.py
CIS 210 - CS I/Week 1/: alphacode.py  drawflower.py
CIS 210 - CS I/Week 10/: tldmonitor.py
CIS 210 - CS I/Week 2/: majors.txt  squareroot.py  test_harness.py
CIS 210 - CS I/Week 3/: draw_barcode.py
CIS 210 - CS I/Week 5/: is_member.py  string_reverse.py
CIS 210 - CS I/Week 7/: eqanalysis test.py
CIS 210 - CS I/Week 8/: grid.py  sdkdisplay.py  sdktactics.py  sdktextview.py  sudoku.py
CIS 210 /Week 2/: count.py
CIS 210 /Week 3/: calpr.py
CIS 210 /Week 4/: jumbler.py
CIS 210 /Week 5/: list.txt
CIS 210 /Week 6/: routes.py
CIS 210 /Week 8/: sdkboard.py
CIS 211 - CS II/Notes/: Classes, Subclasses, Inheritance.py  FINAL_Checker.py  MIDTERM_REVIEW.py  Postfix,.py
CIS 211 - CS II/Proj 1 - Rects-master/: README.md  graphics.py  rects.py  test_rects.py
CIS 211 - CS II/Proj 10 - duck_compiler-master/: README.md  codegen_context.py  compile.py  expr.py  fact.asm  fact.dcode  lexer.py  rpn_parse.py  syntax.py
CIS 211 - CS II/Proj 2 - lineapprox-master/: README.md  plot_path.py  test_geometry.py
CIS 211 - CS II/Proj 3 - FiveTwelve-master/: README.md  game_manager.py  keypress.py  model.py  view.py
CIS 211 - CS II/Proj 4 - symcalc-master/: expr.py  rpn_parse.py  syntax.py
CIS 211 - CS II/Proj 5:6 - sudoku-master/: sdk_group.py
CIS 211 - CS II/Proj 7 - bitfields-master/: README.md  bitfield.py
CIS 211 - CS II/Proj 8 - duck_machine-master/: README.md  bitfield.py  duck_machine.py  max.dasm  view.py
CIS 211 - CS II/Proj 9 - duck_machine-master/: asm_pattern.py  assembler_pass1.py  assembler_pass2.py  compile_ex  est.dasm  etst.dasm  fact.dasm  mvc.py  re_examples.py  register.py  test.das,  test.dasm  this.asm
CIS 211/Notes/: FINAL_Hex.py  (+1 more)
CIS 212/: .project
CIS 212 - CS III/: NoahTignerTalk.docx
CIS 313/: FINAL.docx
CIS 399 - Data Science/: library_w19_deep_1.py
CIS 407 - Careers Seminar/: 407 Milestone.docx  407 Project Proposal.docx
CIS 410 - Scientific Visualization/Project1/: CMakeLists.txt  data.vtk  proj1.cxx
CIS 410 - Scientific Visualization/Project2/: CMakeLists.txt  proj2.cxx  proj2_data.vtk
CIS 410 - Scientific Visualization/Project3/: CMakeLists.txt  proj3.cxx  proj3_data.vtk
CIS 410 - Scientific Visualization/Project3/differencer/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  differencer.cxx
CIS 410 - Scientific Visualization/Project3/differencer/differencer.app/Contents/: Info.plist
CIS 410 - Scientific Visualization/Project3/differencer/differencer.app/Contents/MacOS/: differencer
CIS 410 - Scientific Visualization/Project4/: CMakeLists.txt  proj4.cxx  proj4_data.vtk
CIS 410 - Scientific Visualization/Project5/: CMakeLists.txt  proj5.cxx  proj5.vtk
CIS 410 - Scientific Visualization/Project6/: CMakeLists.txt  proj6.cxx
CIS 410 - Scientific Visualization/Project7/: CMakeLists.txt  proj7A.cxx  proj7B.cxx  proj7C.cxx  proj7D.cxx  proj7E.cxx  proj7F.cxx  proj7G.cxx
CIS 425 - Principles of Programming Languages/: midterm1.sml
CIS 471 - Artificial Intelligence/: OSFinalNotes.docx
GEOG 481 - Geographic Information Systems I/: Lab2.docx  Lab4.docx  Lab5.docx  Lab7.docx
GEOG 494 - Spatial Analysis/: Assignment1.docx  Assignment1_Revised.docx
GEOG 495 - Data Analysis/: Quiz1.docx  Quiz2.docx  Quiz3.docx
(+879 files in other folders)
